--- a/style.css
+++ b/style.css
@@ -20,15 +20,16 @@ html, body {
 .login-container {
     width: 1000px;
     max-width: 100%;  /* Use 100% to ensure it uses full width */
-    height: 500px;
+    height: 600px;
     display: flex;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     background-color: #fff;
+    
 }
 
 /* Left panel with the background image */
 .left-panel {
-    width: 50%;
+    width: 40%;
     background-image: url('./assets/shubham-dhage-l9kImi8Zbtk-unsplash.jpg');
     background-size: cover;
     background-position: center;
@@ -38,12 +39,12 @@ html, body {
 
 /* Right panel containing the form */
 .right-panel {
-    width: 50%;
-    display: flex;
+    width: 60%;
+    display: block;
     justify-content: center;
     align-items: center;
-    padding: 20px;
     box-sizing: border-box;
+    
 }
 
 /* Logo container */
@@ -75,3 +76,59 @@ html, body {
     color: #fffbfb;
     margin-top: 10px;
 }
+.upper-text{
+    padding: 30px;
+    box-sizing: border-box;
+    background-color: rgba(255, 255, 255, 0.8);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    height: 30%;
+    line-height: 1.5;
+}
+.login-form{
+    display: flex;
+    height: 250px;
+    flex-direction: column;
+    background-color: rgb(227, 241, 225);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    
+}
+.login-form h2{
+    padding-left: 30px;
+    font-family: 'customFont';
+}
+.form-items {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 30px;
+   
+}
+
+/* Styling for form-right and form-left to split the columns */
+.form-right, .form-left {
+    width: 48%; /* Adjust the width to fit two columns */
+}
+
+/* Styling for labels and inputs */
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: rgb(51, 51, 51, 0.8);
+    font-size: small;
+}
+
+input[type="text"], 
+input[type="email"], 
+input[type="number"], 
+input[type="password"] {
+    width: 85%;
+    padding: 10px;
+    margin-bottom: 8px;
+    box-sizing: border-box;
+    height: 30px;
+    background-color: rgb(242, 247, 241);
+    border: 1px solid rgb(204, 204, 204, 0.5);
+    border-radius: 5px;
+}
+
